# pycalc

./: .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.md  example.json  gridcalc.toml.example  pyproject.toml
.github/workflows/: build-abi3.yml  build-publish.yml  ci.yml
docs/: 2d-vec-design.md  fix-text-bool.md  function_coverage.md  keybindings.md  security-plan.md  topological.md
examples/: example_excel.json  example_goal.json  example_hybrid.json  example_lp.json  example_multisheet.json  example_multisheet.xlsx
pycalc/: engine.py  sandbox.py  tui.py
src/gridcalc/: __init__.py  __main__.py  _core.cpp  _core.pyi  _opt.cpp  config.py  engine.py  goalseek.py  keys.py  opt.py  sandbox.py  tui.py
src/gridcalc/formula/: __init__.py  ast_nodes.py  deps.py  errors.py  evaluator.py  lexer.py  parser.py
src/gridcalc/libs/: __init__.py  xlsx.py
tests/: conftest.py  test_config.py  test_engine.py  test_formula_evaluator.py  test_formula_integration.py  test_formula_lexer.py  test_formula_parser.py  test_goalseek.py  test_keys.py  test_libs.py  test_opt.py  test_sandbox.py  test_search_direction.py  test_swap_refs.py  test_tui.py  test_xlsx_io.py
tests/integration/: conftest.py  test_tui_pty.py
