

[project]
name = "gridcalc"
version = "0.1.2"
description = "A terminal spreadsheet powered by Python formulas"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
keywords = ["spreadsheet", "terminal", "tui", "curses", "calculator", "visicalc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pygments>=2.15",
    "tomli>=1.0; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas-stubs>=2.0",
    "pytest",
    "ruff>=0.15.7",
    "twine>=6.2.0",
    "build>=1.0",
    "types-Pygments>=2.15",
]

[project.scripts]
gridcalc = "gridcalc.tui:main"

[project.urls]
Homepage = "https://github.com/shakfu/gridcalc"
Repository = "https://github.com/shakfu/gridcalc"
Issues = "https://github.com/shakfu/gridcalc/issues"

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "S"]
ignore = ["S307", "S603", "S605", "S108", "S102", "S110"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
