[project]
name = "gridcalc"
version = "0.1.3"
description = "A terminal spreadsheet powered by Python formulas"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Shakeeb Alireza", email = "shakfu@users.noreply.github.com" }
]
keywords = ["spreadsheet", "terminal", "tui", "curses", "calculator", "visicalc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "tomli>=1.0; python_version < '3.11'",
]

[project.optional-dependencies]
# A single extras bundle. Either install the core (zero third-party
# runtime deps) or `gridcalc[extras]` for everything: numpy enables
# ndarray formulas and LAPACK-backed solvers, pandas enables
# DataFrame formulas and the `:pd` commands, pygments enables
# syntax-highlighted code preview in the trust prompt.
extras = ["numpy>=1.24", "pandas>=2.0", "pygments>=2.15"]

[dependency-groups]
dev = [
    "build>=1.0",
    "mypy>=1.19.1",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "pandas-stubs>=2.0",
    "pygments>=2.15",
    "pytest",
    "ruff>=0.15.7",
    "twine>=6.2.0",
    "types-Pygments>=2.15",
]

[project.scripts]
gridcalc = "gridcalc.tui:main"

[project.urls]
Homepage = "https://github.com/shakfu/gridcalc"
Repository = "https://github.com/shakfu/gridcalc"
Issues = "https://github.com/shakfu/gridcalc/issues"

[build-system]
requires = ["scikit-build-core>=0.8", "nanobind"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/gridcalc"]
cmake.args = []
cmake.define = {}
cmake.build-type = "Release"
cmake.source-dir = "."
sdist.include = []
sdist.exclude = []
wheel.exclude = []

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "S"]
ignore = ["S307", "S603", "S605", "S108", "S102", "S110"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
# Default test run excludes the slow PTY-driven curses integration tests.
# Run them explicitly with `make test-tty` or `pytest -m tty tests/integration`.
addopts = "-m 'not tty'"
markers = [
    "tty: PTY-driven curses integration test (slow, requires pty + xterm-256color)",
    "tui_file(path): preload gridcalc with this file on launch",
]
